# onenote-exporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: security.yml  test.yml
onenote_export/: cli.py  utils.py
onenote_export/converter/: markdown.py
onenote_export/model/: content.py  notebook.py  page.py  section.py
onenote_export/parser/: content_extractor.py  one_store.py  properties.py
tests/: test_cli.py  test_content_extractor.py  test_integration.py  test_markdown_converter.py  test_models.py  test_utils.py
tests/test_data/Example-NoteBook-1/: Example-Section-1 (On 2-25-26 - 2).one  Example-Section-1 (On 2-27-26).one  Example-Section-2 (On 2-25-26 - 2).one  Example-Section-2 (On 2-27-26).one  Example-Section-3 (On 2-27-26).one
