[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-onenote-export"
version = "0.1.0"
description = "Export Microsoft OneNote (.one) files to Markdown"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["pyOneNote>=0.0.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
onenote-export = "onenote_export.cli:main"

[tool.setuptools.packages.find]
include = ["onenote_export*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
